--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
-# Database
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/careers-builder?retryWrites=true&w=majority
+# MongoDB Connection
+MONGODB_URI=your_mongodb_connection_string_here
 
-# Authentication
-JWT_SECRET=your-super-secret-key-min-32-chars-long
+# JWT Secret for Authentication
+JWT_SECRET=your_random_secret_string_here_min_32_characters
 
-# Application
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+# Base URL for your application (important for SEO)
+# Development
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# Production (update this when deploying)
+# NEXT_PUBLIC_BASE_URL=https://yoursite.com
