--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,4 @@ JWT_SECRET=your_random_secret_string_here_min_32_characters
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
 # Production (update this when deploying)
-# NEXT_PUBLIC_BASE_URL=https://yoursite.com
+# NEXT_PUBLIC_BASE_URL=https://whitecarrot-five.vercel.app
