tech spec and readme

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,5 @@
-# MongoDB Connection
 MONGODB_URI=your_mongodb_connection_string_here
-
-# JWT Secret for Authentication
 JWT_SECRET=your_random_secret_string_here_min_32_characters
-
-# Base URL for your application (important for SEO)
-# Development
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
-
-# Production (update this when deploying)
-# NEXT_PUBLIC_BASE_URL=https://whitecarrot-five.vercel.app
+#below url is for production
+#NEXT_PUBLIC_BASE_URL=https://whitecarrot-five.vercel.app
