--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "next": "16.0.6",
     "next-pwa": "^5.6.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "styled-components": "^6.1.19"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
@@ -36,7 +35,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/styled-components": "^5.1.36",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
     "jest": "^30.2.0",
